content/docs/2.6.3/usage.adoc
= Usage
Jonathan Bullock
2018-04-15
:jbake-type: page
:jbake-tags: documentation
:jbake-status: published
:idprefix:

== Usage

Running jbake without arguments is equivalent to running jbake with `-h`, and will display the usage instructions.

----
$ jbake
----

=== Bake command

The bake command mixes your source content with your templates and cooks it all into a fully baked web site. You have a number of different ways to execute the bake
command to suite your requirements.

The `-b` option without any parameters will assume your source content is in the current working directory and will place the baked output into a directory named `output`
in the current directory:

----
$ jbake -b
----

NOTE: JBake will create this `output` directory if it does not already exist.

If you specify only the source directory as a parameter then the output directory will automatically be generated inside the source directory:

----
$ jbake -b <source>
----

You can also specify your source directory and output directory to enable you to have full control over the baking process:

----
$ jbake -b <source> <output>
----

You can even omit the `-b` option if you supply the source directory and output directory parameters:

----
$ jbake <source> <output>
----


=== Initialisation command

The initialisation command will seed your project directory with the required project structure along with a number of sample content files and templates. You do have the
option to choose what template engine is used though.

The `-i` option will seed the current working directory and use the http://freemarker.org[Freemarker] template engine by default:

----
$ jbake -i
----

You can also specify the directory to initialise by supplying an additional parameter:

----
$ jbake -i <directory>
----

To specify the template engine you can use the `-t` option along with another parameter:

----
$ jbake -i -t <freemarker|groovy|groovy-mte|thymeleaf|jade>
----

NOTE: The template engines available are http://freemarker.org[Freemarker], http://www.groovy-lang.org/[Groovy Simple and Markup], http://www.thymeleaf.org/[Thymeleaf]
and https://github.com/neuland/jade4j[Jade].

==== Example Project Structures

The example project structure and sample templates are stored in your JBake installation folder in the files:

* `example_project_freemarker.zip`
* `example_project_groovy.zip`
* `example_project_groovy-mte.zip`
* `example_project_thymeleaf.zip`
* `example_project_jade.zip`

If you'd like to change the structure or sample templates in some way then you can extract the contents of these files, update
as required, then ZIP them back up and replace the original ZIP file with your updated file. Then JBake will use your updated
project structure and templates when ever it initialises a new folder from then on.

=== Server command

The server command will allow you to see what your baked site looks like when served out by a HTTP web server, great for when you want to preview your site using
your local web browser.

The `-s` option will start JBake in server mode allowing you to preview your baked site at http://localhost:8820/ by default it will serve out the contents of the
`output` directory in the current working directory:

----
$ jbake -s
----

NOTE: The local port used can be changed via the configuration file.

You can specify the directory to serve out by supplying an additional parameter:

----
$ jbake -s <directory>
----

==== Overriding `site.host`

The `site.host` property in your `jbake.properties` will be automatically be overridden with the following value when using the server command:

----
site.host=http://localhost:8820
----

NOTE: If you have altered the port from the default it will be reflected in this value too.

==== Watch mode

While the server is running JBake will watch the content, assets and templates folders for any changes (new files as well as changes to existing content) and automatically trigger a bake. So
you can refresh your browser to see the changes to the output.

This mode is best used in conjunction with incremental rendering, for details on how to enable this please see the <<persistent_content_store>> configuration option.

=== Combining commands

It is possible to combine certain JBake commands together like so:

----
$ jbake -b -s
----

This will bake your site first and then serve the output out using the built in server, using the defaults mentioned above.

=== Environment Variable

You can use the JBake environment variable `JBAKE_OPTS` to set JVM system properties such as `user.language` for when JBake executes:

----
$ export JBAKE_OPTS="-Duser.language=DE"
----
